# HealthFinance-API

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
init/: backend_test.db
src/data/interfaces/: patients_repository.py  pharmacies_repository.py  transactions_repository.py  users_repository.py
src/data/tests/: patient_finder.py  pharmacie_finder.py  transaction_finder.py  user_finder.py  user_register.py
src/data/use_cases/: patient_finder.py  patient_finder_test.py  pharmacies_finder.py  pharmacies_finder_test.py  transactions_finder.py  transactions_finder_test.py  user_authenticate.py  user_finder.py  user_finder_test.py  user_register.py  user_register_test.py
src/domain/models/: patients.py  pharmacies.py  transactions.py  users.py
src/domain/use_cases/: patient_finder.py  pharmacie_finder.py  transaction_finder.py  user_authenticate.py  user_finder.py  user_register.py
src/errors/: error_handle.py
src/errors/types/: __init__.py
src/main/adpters/: request_adpter.py
src/main/composers/: patient_finder_composer.py  pharmacie_finder_composer.py  transaction_finder_composer.py  user_authenticate_composer.py
src/main/routes/: patient_routes.py  (+4 more)
src/validators/: patient_finder_validator.py  patient_finder_validator_test.py  pharmacie_finder_validator.py  pharmacie_finder_validator_test.py  transaction_finder_validator.py  transaction_finder_validator_test.py  user_finder_validator.py  user_finder_validator_test.py  user_register_validator.py  user_register_validator_test.py
(+34 files in other folders)
